--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "files.associations": {
-    "stdbool.h": "c"
+    "stdbool.h": "c",
+    "sdl2_gfxprimitives.h": "c",
+    "debugmalloc.h": "c"
   }
 }
