--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "files.associations": {
     "stdbool.h": "c",
     "sdl2_gfxprimitives.h": "c",
-    "debugmalloc.h": "c"
+    "debugmalloc.h": "c",
+    "sdl.h": "c",
+    "stdlib.h": "c"
   }
 }
