--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,11 @@
     "sdl.h": "c",
     "stdlib.h": "c",
     "stdio.h": "c",
-    "file_utils.h": "c"
+    "file_utils.h": "c",
+    "io.h": "c",
+    "locale.h": "c",
+    "windows.h": "c",
+    "proba1.h": "c",
+    "wchar.h": "c"
   }
 }
